--- a/ldoc.css
+++ b/ldoc.css
@@ -74,7 +74,7 @@ input,button,textarea,select {
 
 @media screen {
   html {
-    margin: 0;
+    margin-left: -500px;
     background-color: #333333; /* Fills the page */
     position: relative; /* Fix for absolute positioning */
   }
@@ -95,8 +95,8 @@ span.annotation {
 }
 
 #container {
-  position: relative;
-  padding: 50px;
+  position: static;
+  padding: 5em;
   background-color: #222222;
 }
 
@@ -353,7 +353,7 @@ span.module-ext:before {
 }
 
 /* Introduce curved border around body */
-@media only screen and (min-width: 30em) {
+@media only screen and (min-width: 5px) {
   body {
     margin: 1em;
   }
@@ -365,18 +365,18 @@ span.module-ext:before {
 }
 
 /* Pop out navigation as left sidebar */
-@media only screen and (min-width: 50em) {
+@media only screen and (min-width: 0) {
   body {
-    margin-left: 18em;
+    margin-left: 50em;
   }
   #navigation {
     position: fixed;
     z-index: 10;
     top: 0;
     left: 0;
-    padding: 0;
+    padding: 5px;
     margin: 0;
-    width: 17em;
+    width: 15em;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch; /* Enable inertial scrolling on iOS */
     height: 100vh;
@@ -402,17 +402,16 @@ p.ebnf-symbol {
 }
 
 /* Limit maximum width of body */
-@media only screen and (min-width: 50) {
+@media only screen and (min-width: 0em) {
   body {
-    max-width: 40em;
+    max-width: 100em;
   }
 }
 
 /* Center body on wide screens, pop out sidebars */
-@media only screen and (min-width: 80em) {
+@media only screen and (min-width: 5em) {
   body {
-    margin-left: auto;
-    margin-right: auto;
+    margin-top: 1em;
   }
   .sidebar {
     display: block;
@@ -425,7 +424,7 @@ p.ebnf-symbol {
     width: 15em;
     background-color: #EFF2B9;
     border: solid #A0A0A0 1px;
-    box-shadow: 3px 3px 5px rgba(255, 255, 255, 0.5);
+    box-shadow: 3px 3px 5px rgba(255, 255, 255, 1);
   }
 }
 
@@ -453,7 +452,7 @@ p.ebnf-symbol {
   
   #main {
     background-color: #222222;
-    border-left: 0px;
+    border-left: 10px;
   }
   
   #container {
@@ -481,7 +480,8 @@ p.ebnf-symbol {
 
 table.module_list,
 table.function_list {
-  border: 5px solid #445AA4;
+  position: relative;
+  border: 8px solid #445AA4;
   border-collapse: collapse;
 }
 
@@ -493,12 +493,12 @@ table.function_list td {
 
 table.module_list td.name {
   background-color: #202020;
-  min-width: 14em;
+  min-width: 0em;
 }
 
 table.function_list td.name {
   background-color: #262622;
-  min-width: 14em;
+  min-width: 0em;
 }
 
 table.module_list td.summary,
@@ -533,6 +533,10 @@ dl.function h3 {
 }
 
 ul.nowrap {
+  overflow: auto;
+}
+
+dl.nowrap {
   overflow: auto;
 }
 
